--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "express": "^4.21.2",
         "express-rate-limit": "^7.5.0",
         "google-search-results-nodejs": "^2.1.0",
+        "joi": "^17.13.3",
         "jsonwebtoken": "^9.0.2",
         "mongodb": "^6.13.1",
         "mongoose": "^8.10.1",
